--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
         "format": "prettier --write \"**/*.{js,json,html,css,scss,yml,md}\""
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "bootstrap": "^5.3.3",
-        "bootstrap-icons": "^1.11.3",
         "generate-password-browser": "^1.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
