Implement diceware generator

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "bootstrap": "^5.3.3",
+        "camelcase": "^8.0.0",
         "generate-password-browser": "^1.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
