--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -54,4 +54,4 @@ jobs:
                   aws-region: eu-central-1
 
             - name: Upload to AWS S3
-              run: aws s3 sync public s3://pass.wayspace.net --delete
+              run: aws s3 sync build s3://pass.wayspace.net --delete
