--- a/renovate.json
+++ b/renovate.json
@@ -7,8 +7,7 @@
     "packageRules": [
         {
             "matchUpdateTypes": ["patch", "pin", "digest"],
-            "automerge": true,
-            "ignoreTests": true
+            "automerge": true
         },
         {
             "matchPackageNames": ["node"],
