--- a/renovate.json
+++ b/renovate.json
@@ -1,27 +1,28 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "extends": [
+        ":semanticPrefixFixDepsChoreOthers",
+        ":ignoreModulesAndTests",
+        ":automergePatch",
+        "group:monorepos",
+        "group:recommended",
+        "replacements:all",
+        "workarounds:all"
+    ],
     "schedule": ["before 5am"],
-    "prHourlyLimit": 2,
+    "prHourlyLimit": 3,
     "prConcurrentLimit": 3,
     "enabledManagers": ["npm", "dockerfile", "circleci", "github-actions"],
     "packageRules": [
         {
-            "matchUpdateTypes": ["patch", "pin", "digest"],
-            "automerge": true
+            "groupName": "all minor dependencies",
+            "groupSlug": "all-minor",
+            "matchPackagePatterns": ["*"],
+            "matchUpdateTypes": ["minor"]
         },
         {
-            "matchPackageNames": ["node"],
+            "matchPackageNames": ["node", "cimg/node"],
             "versioning": "node"
-        },
-        {
-            "extends": "group:react",
-            "groupName": "React",
-            "matchUpdateTypes": ["digest", "patch", "minor", "major"]
-        },
-        {
-            "extends": "group:fortawesome",
-            "groupName": "Font Awesome",
-            "matchUpdateTypes": ["digest", "patch", "minor", "major"]
         }
     ]
 }
