--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     },
     "devDependencies": {
         "eslint": "^8.57.0",
+        "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-jsdoc": "^50.0.0",
-        "prettier": "^3.2.5"
+        "prettier": "^3.2.5",
+        "vite-plugin-eslint": "^1.8.1"
     },
     "browserslist": {
         "production": [
