--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -56,4 +56,4 @@ jobs:
                   aws-region: eu-central-1
 
             - name: Upload to AWS S3
-              run: aws s3 sync build s3://pass.wayspace.net --delete
+              run: aws s3 sync dist s3://pass.wayspace.net --delete
