--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "omgopass": "^3.2.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-router-dom": "^7.0.0",
+        "react-router": "^7.10.1",
         "sass": "^1.71.1",
         "vite": "^7.0.0"
     },
