--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,17 +11,22 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v6
 
+            - name: Setup Pnpm
+              uses: pnpm/action-setup@v4
+              with:
+                  version: 10
+
             - name: Setup Node.js
               uses: actions/setup-node@v6
               with:
                   node-version: 24
-                  cache: yarn
+                  cache: pnpm
 
-            - name: Install Yarn dependencies
-              run: yarn install --immutable
+            - name: Install dependencies
+              run: pnpm install --frozen-lockfile
 
             - name: Build React app
-              run: yarn build
+              run: pnpm run build
               env:
                   PUBLIC_URL: https://pass.wayspace.net
 
