--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
         "build": "vite build",
         "preview": "vite preview",
         "lint": "eslint src",
-        "lint:ci": "eslint --format junit --output-file ./lint-results/eslint/junit.xml src",
         "format": "prettier --write \"**/*.{js,jsx,json,html,css,scss,yml,md}\""
     },
     "dependencies": {
@@ -67,6 +66,5 @@
             "last 1 safari version"
         ]
     },
-    "type": "module",
-    "packageManager": "yarn@4.12.0"
+    "type": "module"
 }
