--- a/package.json
+++ b/package.json
@@ -46,12 +46,17 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.24.0",
+        "@types/node": "^25.0.1",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3",
         "eslint": "^9.23.0",
         "eslint-formatter-junit": "^9.0.0",
         "eslint-plugin-jsdoc": "^61.0.0",
         "eslint-plugin-react": "^7.37.4",
         "globals": "^16.0.0",
         "prettier": "^3.2.5",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.49.0",
         "vite-plugin-eslint": "^1.8.1"
     },
     "browserslist": {
