--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "devDependencies": {
         "@eslint/js": "^9.24.0",
         "@types/node": "^25.0.1",
+        "@types/omgopass": "^3.2.3",
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
         "eslint": "^9.23.0",
